# gateway/src/api/routes/payment.ts
@@ -1,10 +1,10 @@
-import { Router, Response } from 'express';
+import { Response, Router } from 'express';
 import { Project } from 'hypecrafter-shared/enums';
 
 const init = () => {
   const router = Router();
 
-  return router.get('/:id', (_, res: Response) => res.delegate(Project.PAYMENT));
+  return router.get('/:id/:page', (_, res: Response) => res.delegate(Project.PAYMENT));
 };
 
 export default init;
